feat: add settings api for event type
